# PolicyPal.ai

./: .gitignore  DEPLOYMENT.md  LINKEDIN_SHARING_GUIDE.md  README.md  chat.html  chat.py  dataClasses.py  empty_result_handler.py  index.html  pyproject.toml  response_generator.py  scheme_database.py  scheme_retriever.py  scheme_schema.json  session_manager.py  test_api.py  test_empty_results_properties.py  test_scheme_search_properties.py  test_websocket.py  websocket_client.py
.kiro/specs/local-language-assistant/: design.md  requirements.md  tasks.md
data/: .gitkeep  schemes.json
fastapi/: __init__.py  testclient.py
src/: __init__.py  config.py  data_loader.py  main.py  matcher.py  schemas.py
tests/: __init__.py  test_auth_otp.py  test_config.py  test_pyload.py
