[project]
name = "local-language-assistant"
version = "0.1.0"
description = "Low-bandwidth conversational assistant for government schemes"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "fastapi>=0.104.0",
  "uvicorn>=0.24.0",
  "pydantic>=2.5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "hypothesis>=6.92.0",
  "httpx>=0.25.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
